# Attachment-Model

./: CMakeLists.txt  README.md  package.xml
launch/: relationship.launch
models/Apriltag36_11_00000/: model.sdf
models/Apriltag36_11_00001/: model.sdf
models/Apriltag36_11_00002/: model.sdf
models/Apriltag36_11_00003/: model.sdf
models/Apriltag36_11_00004/: model.sdf
models/Apriltag36_11_00005/: model.sdf
models/Apriltag36_11_00006/: model.sdf
models/Apriltag36_11_00007/: model.sdf
models/Apriltag36_11_00008/: model.sdf
models/Apriltag36_11_00009/: model.sdf
models/miro_attachment_arena/: miro_attachment_arena.sdf  model.config
src/: actuators.py  behaviors.py  central_control.py  child_node.py  parent_node.py  perception.py  plot_graph.py  subscribers.py  utils.py
worlds/: attachment.world
