<?xml version="1.0"?>
<package format="2">
  <name>Attachment-Model</name>
  <version>0.0.0</version>
  <description>The Attachment-Model package for MiRo attachment relationship behavior</description>

  <maintainer email="ahtet1@sheffield.ac.uk">Aung Htet</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
    
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
